test/log/move/vmv_x_v_i32_m.txt
vmv_x_v_i32_m.c:9:2: warning: multi-line comment [-Wcomment]
    9 |  //#define data_init_bool(a, b, n, threshold) \
      |  ^
vmv_x_v_i32_m.c:11:44: warning: backslash and newline separated by space
   11 |  #define data_init_scalar(a, b, threshold) \
      |                                             
vmv_x_v_i32_m.c:30:6: warning: function declaration isn't a prototype [-Wstrict-prototypes]
   30 | void vmv_x_v_i32_m_golden(uint64_t *mask,int32_t *a,uint32_t b,int32_t exp_result;) {
      |      ^~~~~~~~~~~~~~~~~~~~
vmv_x_v_i32_m.c: In function 'vmv_x_v_i32_m_golden':
vmv_x_v_i32_m.c:32:9: error: 'exp_result' undeclared (first use in this function)
   32 |         exp_result[i] = TODO;
      |         ^~~~~~~~~~
vmv_x_v_i32_m.c:32:9: note: each undeclared identifier is reported only once for each function it appears in
vmv_x_v_i32_m.c:32:25: error: 'TODO' undeclared (first use in this function)
   32 |         exp_result[i] = TODO;
      |                         ^~~~
vmv_x_v_i32_m.c: In function 'main':
vmv_x_v_i32_m.c:50:5: warning: implicit declaration of function 'data_init_bool'; did you mean 'data_init_scalar'? [-Wimplicit-function-declaration]
   50 |     data_init_bool(mask, exp_mask, 16, 0xffffffff);
      |     ^~~~~~~~~~~~~~
      |     data_init_scalar
vmv_x_v_i32_m.c:52:26: error: expected ';' before 'vmv_x_v_i32_m_golden'
   52 |     b = exp_b = rand()%16 // b and exp_b should be in the range[0,16), 0xffffffff);
      |                          ^
      |                          ;
......
   55 |     vmv_x_v_i32_m_golden(exp_mask,exp_a,exp_b,exp_result);
      |     ~~~~~~~~~~~~~~~~~~~~  
vmv_x_v_i32_m.c:62:22: error: subscripted value is neither array nor pointer nor vector
   62 |         if(exp_result[i] != result[i]) {
      |                      ^
vmv_x_v_i32_m.c:62:35: error: subscripted value is neither array nor pointer nor vector
   62 |         if(exp_result[i] != result[i]) {
      |                                   ^
vmv_x_v_i32_m.c:63:79: error: subscripted value is neither array nor pointer nor vector
   63 |             printf("Failed: result[%d] = %x, exp_result[%d] = %x\n", i, result[i], i, exp_result[i]);
      |                                                                               ^
vmv_x_v_i32_m.c:63:97: error: subscripted value is neither array nor pointer nor vector
   63 |             printf("Failed: result[%d] = %x, exp_result[%d] = %x\n", i, result[i], i, exp_result[i]);
      |                                                                                                 ^
vmv_x_v_i32_m.c:48:13: warning: variable 'exp_result' set but not used [-Wunused-but-set-variable]
   48 |     int32_t exp_result;
      |             ^~~~~~~~~~
vmv_x_v_i32_m.c:47:13: warning: variable 'result' set but not used [-Wunused-but-set-variable]
   47 |     int32_t result = {0};
      |             ^~~~~~
vmv_x_v_i32_m.c:44:13: warning: variable 'exp_a' set but not used [-Wunused-but-set-variable]
   44 |     int32_t exp_a[16];
      |             ^~~~~
make[1]: *** [/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vmv_x_v_i32_m.o] Error 1
make: *** [bare] Error 2
======================================================================

 target	:	deccription
****************************
 bare	:	build application on baremental case. param: type=app-type app=app-name

 rbb	:	run bare-app on beak. (build it firstly if modified) param: APP_TYPE=type APP_NAME=app-name , bp=beak-param

 clean		:	delete objects generated by make
****************************

/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/scripts/gorun.sh /home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test "make -j4 APP_TYPE=test APP_NAME=vmv_x_v_i32_m"
~/workspace/risc-v/rivai/riscv-intrinsic-testing/test ~/workspace/risc-v/rivai/riscv-intrinsic-testing
make[1]: Entering directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
    CC vmv_x_v_i32_m.c
Makefile:73: recipe for target '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vmv_x_v_i32_m.o' failed
make[1]: Leaving directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
Makefile:37: recipe for target 'bare' failed